--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
     
 <div class="row">
   <div class="large-12 columns">
-    <table>
+    <table align="center">
   <tbody>
     <tr>
-      <td class="large-4 columns"><span class="icon-beer"></span></td>
-      <td class="large-4 columns">This is longer content Donec id elit non mi porta gravida at eget metus.</td>
-      <td class="large-4 columns">Content Goes Here</td>
+      <td><div class="icon" data-icon="c"></div></td>
+      <td><div class="icon" data-icon="c"></div</td>
+      <td><div class="icon" data-icon="c"></div</td>
     </tr>
     <tr>
-      <td class="large-4 columns">Content Goes Here</td>
-      <td class="large-4 columns">This is longer Content Goes Here Donec id elit non mi porta gravida at eget metus.</td>
-      <td class="large-4 columns">Content Goes Here</td>
+      <td><div class="icon" data-icon="c"></div</td>
+      <td><div class="icon" data-icon="c"></div</td>
+      <td><div class="icon" data-icon="c"></div</td>
     </tr>
     <tr>
-      <td class="large-4 columns">Content Goes Here</td>
-      <td class="large-4 columns">This is longer Content Goes Here Donec id elit non mi porta gravida at eget metus.</td>
-      <td class="large-4 columns">Content Goes Here</td>
+      <td><div class="icon" data-icon="c"></div</td>
+      <td><div class="icon" data-icon="c"></div</td>
+      <td><div class="icon" data-icon="c"></div</td>
     </tr>
      <tr>
-      <td class="large-4 columns">Content Goes Here</td>
-      <td class="large-4 columns">This is longer content Donec id elit non mi porta gravida at eget metus.</td>
-      <td class="large-4 columns">Content Goes Here</td>
+      <td><div class="icon" data-icon="c"></div</td>
+      <td><div class="icon" data-icon="c"></div</td>
+      <td><div class="icon" data-icon="c"></div</td>
     </tr>
   </tbody>
 </table>
