Matching icon names

--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
     <table align="center">
   <tbody>
     <tr>
-      <td><div class="icon" data-icon="c"></div></td>
-      <td><div class="icon" data-icon="c"></div</td>
-      <td><div class="icon" data-icon="c"></div</td>
+      <td><div class="icon" data-icon="1"></div></td>
+      <td><div class="icon" data-icon="2"></div</td>
+      <td><div class="icon" data-icon="3"></div</td>
     </tr>
     <tr>
-      <td><div class="icon" data-icon="c"></div</td>
-      <td><div class="icon" data-icon="c"></div</td>
-      <td><div class="icon" data-icon="c"></div</td>
+      <td><div class="icon" data-icon="4"></div</td>
+      <td><div class="icon" data-icon="5"></div</td>
+      <td><div class="icon" data-icon="6"></div</td>
     </tr>
     <tr>
-      <td><div class="icon" data-icon="c"></div</td>
-      <td><div class="icon" data-icon="c"></div</td>
-      <td><div class="icon" data-icon="c"></div</td>
+      <td><div class="icon" data-icon="7"></div</td>
+      <td><div class="icon" data-icon="8"></div</td>
+      <td><div class="icon" data-icon="9"></div</td>
     </tr>
      <tr>
-      <td><div class="icon" data-icon="c"></div</td>
-      <td><div class="icon" data-icon="c"></div</td>
+      <td><div class="icon" data-icon="a"></div</td>
+      <td><div class="icon" data-icon="b"></div</td>
       <td><div class="icon" data-icon="c"></div</td>
     </tr>
   </tbody>
