--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <script src="js/vendor/modernizr.js"></script>
   </head>
   <body>
-    
-      
+      <div class="row">
+      <div class="columns large-12">
       <img src="img/header.png" class="tecan" />
+    </div>
+  </div>
      <div class="row">
       <div class="large-12 columns">
     <p><h2>An icon font family with half the icons but twice the appeal!</h2></p>
